@@ -1,44 +1,34 @@
 import java.util.ArrayList;
-import java.util.Random;
 
 /**
  * Holds private fields and some logic for characters. 
  * 
  * @author Blake Payne
- * @since  06.12.2024
+ * @since  12.29.2024
  */
 public class Character {
     
-    private String name;              // Name of a character
-    private Integer health;           // Health value of a character
-    private Integer dungeonSize;      // Integer size of a dungeon (stored in the Hero object)
-    private Integer maxDamage;        // The value of maximum damage a character can do
-    private Integer xCord;            // The X coordinate of a character
-    private Integer yCord;            // The Y coordinate of a character
-    private Integer gold;             // Amount of gold a character possesses
-    private Integer type;             // Character type (0 = hero, 1 = merchant, 2 = monster, 3 = mimic (not hostile), -1 = n/a)
-    
-    private Boolean healthPotionCondition;      // Indicates if the hero can drink a health potion or if a merchant has one to sell
-    private Boolean strengthPotionCondition;    // Indicates if the hero can drink a strength potion or if a merchant has one to sell
-    private Integer characterInSameRoom = -1;   // Holds the index of the character in the same room as the hero
-    private Integer turnCounter = 0;            // Tracks the turn number of the game (stored in the Hero object)
-    private Character hero;                     // Represents the hero object and holds all of the hero's information 
+    private String name = "";                   // Name of a character
+    private int health = 0;                     // Health value of a character
+    private int maxDamage = 0;                  // The value of maximum damage a character can do
+    private int xCord = -1;                     // The X coordinate of a character
+    private int yCord = -1;                     // The Y coordinate of a character
+    private int gold = 0;                       // Amount of gold a character possesses
+    private int type = -1;                      // Character type (0 = hero, 1 = merchant, 2 = monster, 3 = mimic (not hostile), -1 = n/a)
+    private boolean hasHealthPotion = false;    // Indicates if the hero can drink a health potion or if a merchant has one to sell
+    private boolean hasStrengthPotion = false;  // Indicates if the hero can drink a strength potion or if a merchant has one to sell
+
+    private int characterInSameRoomIndex = -1;  // Holds the index of the character in the same room as the hero
+    private int dungeonSize = 0;                // Integer size of a dungeon (stored in the Hero object)
+    private int turnCounter = 0;                // Tracks the turn number of the game (stored in the Hero object)
+    private Character hero;                     // Represents the hero object and holds all the hero's information
     
     private ArrayList<Character> characterList = MainLogic.getCharacterList(); // Character arraylist holds all information about each character
     
     /**
-     * A no argument constructor that assigns most fields to zero or false. This character will
-     * be removed from the list of characters when checkForGameOver() is called. 
+     * The default character constructor. This character will be removed from the list when any character dies.
      */
     public Character() {
-        this.health = 0;
-        this.type = -1;
-        this.maxDamage = 0;
-        this.xCord = 0;
-        this.yCord = 0;
-        this.gold = 0;
-        this.healthPotionCondition = false;
-        this.strengthPotionCondition = false;
     }
 
     /**
@@ -51,11 +41,11 @@ public class Character {
      * @param xCord                     The X coordinate of the character
      * @param yCord                     The Y coordinate of the character
      * @param gold                      The gold amount that the character has
-     * @param healthPotionCondition     The indicator for possession of a health potion
-     * @param strengthPotionCondition   The indicator for possession of a strength potion
+     * @param hasHealthPotion           The indicator for possession of a health potion
+     * @param hasStrengthPotion         The indicator for possession of a strength potion
      */
-    public Character(String name, Integer health, Integer type, Integer maxDamage, Integer xCord, Integer yCord, 
-                Integer gold, Boolean healthPotionCondition, Boolean strengthPotionCondition) {
+    public Character(String name, int health, int type, int maxDamage, int xCord, int yCord, int gold,
+                     boolean hasHealthPotion, boolean hasStrengthPotion) {
         this.name = name;
         this.health = health;
         this.type = type;
@@ -63,16 +53,16 @@ public class Character {
         this.xCord = xCord;
         this.yCord = yCord;
         this.gold = gold;
-        this.healthPotionCondition = healthPotionCondition;
-        this.strengthPotionCondition = strengthPotionCondition;
+        this.hasHealthPotion = hasHealthPotion;
+        this.hasStrengthPotion = hasStrengthPotion;
     }
 
     // Getters and Setters for Character class
-    public void setDungeonSize(Integer dungeonSize) {
+    public void setDungeonSize(int dungeonSize) {
         this.dungeonSize = dungeonSize;
     }
 
-    public Integer getDungeonSize() {
+    public int getDungeonSize() {
         return dungeonSize;
     }
 
@@ -84,90 +74,90 @@ public class Character {
         this.name = name; 
     }
 
-    public Integer getHealth() { 
+    public int getHealth() {
         return health; 
     }
 
-    public void setHealth(Integer health) { 
+    public void setHealth(int health) {
         this.health = health;
     }
 
-    public Integer getTypeValue() { 
+    public int getTypeValue() {
         return type; 
     }
 
-    public void setTypeValue(Integer type) { 
+    public void setTypeValue(int type) {
         this.type = type; 
     }
 
-    public Integer getMaxDamage() { 
+    public int getMaxDamage() {
         return maxDamage;
     }
 
-    public void setMaxDamage(Integer maxDamage) { 
+    public void setMaxDamage(int maxDamage) {
         this.maxDamage = maxDamage; 
     }
 
-    public Integer getXCord() { 
+    public int getXCord() {
         return xCord; 
     }
 
-    public void setXCord(Integer xCord) { 
+    public void setXCord(int xCord) {
         if (xCord < 0 || xCord >= MainLogic.getDungeonSize()) {
             MainLogic.getGameWindow().logAndNotifyIllegalState("X Coordinate cannot be negative or equal to/larger than the size of the dungeon");
         }
         this.xCord = xCord;
     }
 
-    public Integer getYCord() { 
+    public int getYCord() {
         return yCord;
     }
 
-    public void setYCord(Integer yCord) { 
+    public void setYCord(int yCord) {
         if (yCord < 0 || yCord >= MainLogic.getDungeonSize()) {
             MainLogic.getGameWindow().logAndNotifyIllegalState("Y Coordinate cannot be negative or equal to/larger than the size of the dungeon");
         }
         this.yCord = yCord;
     }
 
-    public void setXYCords(Integer xCord, Integer yCord) { 
+    public void setXYCords(int xCord, int yCord) {
         setXCord(xCord);
         setYCord(yCord);
     }
 
-    public Integer getGoldValue() { 
+    public int getGoldValue() {
         return gold; 
     }
 
-    public void setGoldValue(Integer gold) { 
+    public void setGoldValue(int gold) {
         this.gold = gold;
     }
 
-    public void setTurnCounterValue(Integer turnCounter) {
+    public void setTurnCounterValue(int turnCounter) {
         this.turnCounter = turnCounter;
     }
 
-    public Integer getTurnCounterValue() {
+    public int getTurnCounterValue() {
         return turnCounter;
     }
 
-    public Boolean getHealthPotionCondition() { 
-        return healthPotionCondition;
+    public boolean getHasHealthPotion() {
+        return hasHealthPotion;
     }
 
-    public void setHealthPotionCondition(Boolean healthPotionCondition) { 
-        this.healthPotionCondition = healthPotionCondition;
+    public void setHasHealthPotion(boolean hasHealthPotion) {
+        this.hasHealthPotion = hasHealthPotion;
     }
 
-    public Boolean getStrengthPotionCondition() { 
-        return strengthPotionCondition;
+    public boolean getHasStrengthPotion() {
+        return hasStrengthPotion;
     }
 
-    public void setStrengthPotionCondition(Boolean strengthPotionCondition) { 
-        this.strengthPotionCondition = strengthPotionCondition;
+    public void setHasStrengthPotion(boolean hasStrengthPotion) {
+        this.hasStrengthPotion = hasStrengthPotion;
     }
 
-    public String getPotionMessage(Boolean inPossession) { 
+    public String getPotionMessage(boolean inPossession) {
         String message = "";
         switch (MainLogic.getLanguage()) {
             case "English": if(inPossession) message = "Owned"; else message = "None"; break;
@@ -176,27 +166,27 @@ public class Character {
         return message;
     }
 
-    public void setCharacterInSameRoom(Integer characterInSameRoom) {
-        this.characterInSameRoom = characterInSameRoom;
+    public void setCharacterInSameRoomIndex(int characterInSameRoomIndex) {
+        this.characterInSameRoomIndex = characterInSameRoomIndex;
     }
 
-    public Integer getCharacterInSameRoom() {
-        return characterInSameRoom;
+    public int getCharacterInSameRoomIndex() {
+        return characterInSameRoomIndex;
     }
 
-    public Integer getPotionTurnCounter() {
+    public int getPotionTurnCounter() {
         return MainLogic.getPotionTurnCounter();
     }
 
-    public void setPotionTurnCounter(Integer potionTurnCounter) {
+    public void setPotionTurnCounter(int potionTurnCounter) {
         MainLogic.setPotionTurnCounter(potionTurnCounter);
     }
 
-    public Boolean getCanRetreat() {
+    public boolean getCanRetreat() {
         return MainLogic.getCanRetreat();
     }
 
-    public void setCanRetreat(Boolean retreatBoolean) {
+    public void setCanRetreat(boolean retreatBoolean) {
         MainLogic.setCanRetreat(retreatBoolean);
     }
 
@@ -205,8 +195,8 @@ public class Character {
      * 
      * @return true if health is less than 0, and false otherwise 
      */
-    public Boolean isDead() { 
-        if (health > 0) return false; else return true; 
+    public boolean isDead() {
+        return health <= 0;
     }
 
     /**
@@ -214,11 +204,8 @@ public class Character {
      * 
      * @return true if escaped, and false otherwise
      */
-    public Boolean hasEscaped() {
-        if ((xCord == (dungeonSize - 1)) && (yCord == (dungeonSize - 1))) {
-            return true;
-        } 
-        else return false; 
+    public boolean hasEscaped() {
+        return (xCord == (dungeonSize - 1)) && (yCord == (dungeonSize - 1));
     }
 
     /**
@@ -234,16 +221,16 @@ public class Character {
     * 
     * @return true if they are in the same room, and false otherwise
     */
-    public Boolean isAnotherCharacterInSameRoom() {
+    public boolean isAnotherCharacterInSameRoom() {
         characterList = MainLogic.getCharacterList();
-        hero = characterList.get(0);
-        this.setCharacterInSameRoom(-1);
+        hero = characterList.getFirst();
+        this.setCharacterInSameRoomIndex(-1);
         
         for (int i = 1; i < characterList.size(); i++) {
             
             // If the hero and a monster are in the same room, the characterInSameRoom variable will be updated to the index of that monster in characterList
             if ((hero.getXCord() == characterList.get(i).getXCord()) && (hero.getYCord() == characterList.get(i).getYCord())) {
-                setCharacterInSameRoom(i);
+                setCharacterInSameRoomIndex(i);
                 return true;
             }
             
@@ -254,33 +241,27 @@ public class Character {
     /**
     * Checks to see if any monsters are adjacent to the hero
     * 
-    * @return smellCounter; the counter that tracks how many adjacent monsters there are
+    * @return smellCounter: the counter that tracks how many adjacent monsters there are
     */
-    public Integer inAdjacentRoom() {
-        Integer smellCounter = 0;
+    public int getSmellCounter() {
         characterList = MainLogic.getCharacterList();
-        hero = characterList.get(0);
-        
+        int smellCounter = 0;
+
         try {
-            if (characterList.size() == 1) {
-                smellCounter = 0;
-            } 
-            else if (characterList.size() == 2) {
-                if (characterList.get(1).getTypeValue() == 1) {
-                    smellCounter = 0;
-                }
-                else {
-                    smellCounter += smellCounterIncrementor(1);
-                }
+            if (characterList.size() <= 2) {
+                // If there are only two characters, the following will check if the second character is adjacent to the hero
+                smellCounter += smellCounterIncrementor(1);
             } 
             else if ((characterList.get(1).getTypeValue() == 1) && (characterList.get(2).getTypeValue() != 1)) { 
-                // TODO: add comment on what this does 
+                // If the second character in the character list is a merchant, but the third character is not,
+                // the following will check all characters, starting with the third, to see if any are adjacent to the hero
                 for (int i = 2; i < characterList.size(); i++) {
                     smellCounter += smellCounterIncrementor(i);
                 }
             } 
             else if ((characterList.get(2).getTypeValue() == 1) && (characterList.get(3).getTypeValue() != 1)) {
-                // TODO: add comment on what this does 
+                // If the third character in the character list is a merchant, but the fourth character is not,
+                // the following will check all characters, starting with the fourth, to see if any are adjacent to the hero
                 for (int i = 3; i < characterList.size(); i++) {
                     smellCounter += smellCounterIncrementor(i);
                 }
@@ -296,17 +277,17 @@ public class Character {
     /**
      * Functionality for smell counter in inAdjacentRoom() method. 
      * 
-     * @param index     The index of the monster in the characterList ArrayList 
-     * @return          smellCounter; the counter that tracks the number of adjacent monsters
+     * @param index     The index of the monster in the characterList arrayList
+     * @return          smellCounter: the counter that tracks the number of adjacent monsters
      */
-    private Integer smellCounterIncrementor(Integer index) {
-        Integer smellCounter = 0;
+    private int smellCounterIncrementor(int index) {
         characterList = MainLogic.getCharacterList();
-        hero = characterList.get(0);
-        
+        hero = characterList.getFirst();
+        int smellCounter = 0;
+
         // Checks the change in x coordinates of the hero and every monster to see any are next to each other
-        Integer xCordChecker = Math.abs(hero.getXCord() - characterList.get(index).getXCord());
-        Integer yCordChecker = Math.abs(hero.getYCord() - characterList.get(index).getYCord());
+        int xCordChecker = Math.abs(hero.getXCord() - characterList.get(index).getXCord());
+        int yCordChecker = Math.abs(hero.getYCord() - characterList.get(index).getYCord());
         
         // If the difference between the x/y coordinate is 1 and the other x/y coordinate is 0, then that monster is adjacent to the hero
         if ((xCordChecker == 1 && yCordChecker == 0) || (xCordChecker == 0 && yCordChecker == 1)) {
@@ -318,38 +299,34 @@ public class Character {
 
     /**
     * Deals damage to hero and monster in combat. Returns boolean value based on character death.
-    *
-    * @return if a character dies, true is returned. Otherwise, false will be returned
     */
     public void hitCharacter() {
-        Random random = new Random();
-        Integer damage; Integer characterHealth;
-        characterList = MainLogic.getCharacterList();
-        hero = characterList.get(0);
-        
+        Character monster = MainLogic.getCharacterList().get(hero.getCharacterInSameRoomIndex());
+        hero = characterList.getFirst();
+
         // Logic for when the hero hits a monster in combat 
-        damage = random.nextInt(hero.getMaxDamage());
-        characterHealth = characterList.get(hero.getCharacterInSameRoom()).getHealth() - damage;
-        characterList.get(hero.getCharacterInSameRoom()).setHealth(characterHealth);
+        int damageToMonster = MainLogic.getRandomNumber(hero.getMaxDamage());
+        int newMonsterHealth = monster.getHealth() - damageToMonster;
+        monster.setHealth(newMonsterHealth);
         
         switch (MainLogic.getLanguage()) {
-            case "English": MainLogic.getGameWindow().printToTerminal("\n\nYou hit " + characterList.get(hero.getCharacterInSameRoom()).getName() + " for " + damage + " damage\n"); break;
-            case "German": MainLogic.getGameWindow().printToTerminal("\n\nSie haben " + characterList.get(hero.getCharacterInSameRoom()).getName() + " für " + damage + " Schadenspunkte geschlagen\n"); break;
+            case "English": MainLogic.getGameWindow().printToTerminal("\n\nYou hit " + monster.getName() + " for " + damageToMonster + " damage\n"); break;
+            case "German": MainLogic.getGameWindow().printToTerminal("\n\nSie haben " + monster.getName() + " für " + damageToMonster + " Schadenspunkte geschlagen\n"); break;
         }
         
         // If the monster dies, it will be removed, but the battle will continue if it is still alive
-        if (characterList.get(hero.getCharacterInSameRoom()).isDead()) { 
+        if (monster.isDead()) {
             MainLogic.setCharacterDeath(true);
         }
         else { 
             // Logic for when a monster hits hero in combat 
-            damage = random.nextInt(characterList.get(hero.getCharacterInSameRoom()).getMaxDamage());
-            characterHealth = hero.getHealth() - damage;
-            hero.setHealth(characterHealth);
+            int damageToHero = MainLogic.getRandomNumber(monster.getMaxDamage());
+            int newHeroHealth = hero.getHealth() - damageToHero;
+            hero.setHealth(newHeroHealth);
             
             switch (MainLogic.getLanguage()) {
-                case "English": MainLogic.getGameWindow().printToTerminal(characterList.get(hero.getCharacterInSameRoom()).getName() + " hits you for " + damage + " damage"); break;
-                case "German": MainLogic.getGameWindow().printToTerminal(characterList.get(hero.getCharacterInSameRoom()).getName() + " hat Sie für " + damage + " Schadenspunkte geschlagen"); break;
+                case "English": MainLogic.getGameWindow().printToTerminal(monster.getName() + " hits you for " + damageToHero + " damage"); break;
+                case "German": MainLogic.getGameWindow().printToTerminal(monster.getName() + " hat Sie für " + damageToHero + " Schadenspunkte geschlagen"); break;
             }
             
             // If the hero dies, the game will end, but the battle will continue if the hero is still alive
@@ -363,46 +340,34 @@ public class Character {
     * @param direction is a String parameter that represents the user input for direction
     * @return if the direction is valid, true is returned. Otherwise, false is returned
     */
-    public Boolean canMove(String direction) {
-        Boolean validDirection = null; 
+    public boolean canMove(String direction) {
+        boolean validDirection = false;
         if (direction.contains("north") || direction.contains("nord")) {
-            if (yCord == 0) {
-                validDirection = false;
-            } 
-            else {
+            if (yCord != 0) {
                 yCord -= 1;
                 validDirection = true;
             }
         } 
         else if (direction.contains("south") || direction.contains("süd") || direction.contains("sued")) {
-            if (yCord == (dungeonSize - 1)) {
-                validDirection = false;
-            } 
-            else {
+            if (yCord != (dungeonSize - 1)) {
                 yCord += 1;
                 validDirection = true;
             }
         } 
         else if (direction.contains("east") || direction.contains("ost")) {
-            if (xCord == (dungeonSize - 1)) {
-                validDirection = false;
-            } 
-            else {
+            if (xCord != (dungeonSize - 1)) {
                 xCord += 1;
                 validDirection = true;
             }
         } 
         else if (direction.contains("west")) {
-            if (xCord == 0) {
-                validDirection = false;
-            } 
-            else {
+            if (xCord != 0) {
                 xCord -= 1;
                 validDirection = true;
             }
         } 
         else MainLogic.getGameWindow().logAndNotifyIllegalState("An valid direction was imputed, but the hero could not be moved.");
-        
+
         return validDirection;
     }
     
